# bautista

./: .gitignore  .prettierrc.js  Bot.js  Config.js  Device.js  Makefile  PersistedStatus.js  Price.js  Rules.js  getCheapestPrices.js  getPrices.js  index.js  package.json
arch/: PKGBUILD  install.sh
arch/root/etc/bautista/: bautista.json  config.json  config.toml  creds.json
arch/root/usr/lib/bautista/: bautista  meross-bridge-launcher
arch/root/usr/lib/sysusers.d/: bautista.conf
arch/root/usr/lib/tmpfiles.d/: bautista.conf
node/: package-lock.json  package.json
node/bautista/: Bot.js  Config.js  Device.js  PersistedStatus.js  Price.js  Rules.js  Schedule.js  index.js  package.json
node/meross-bridge/: Config.js  Device.js  index.js  package.json
rust/: Cargo.toml
rust/bautista-bot/: Cargo.toml
rust/bautista-bot/src/: config.rs  lib.rs  main.rs  meross.rs  prices.rs  report.rs
rust/bautista-bot/src/command/: tide.rs
rust/bautista-bot/src/commands/: best_hours.rs  hello.rs  mod.rs  tides.rs
rust/bautista-bot/src/config/: mod.rs  types.rs
rust/bautista-bot/src/device/: meross.rs  mod.rs  status.rs
rust/bautista-bot/src/devices/: meross.rs  mod.rs
rust/bautista-bot/src/prices/: esios.rs  mod.rs  pdll.rs  tranch_calculator.rs
rust/bautista-bot/src/rule/: cheap.rs  heater.rs  mod.rs  util.rs
rust/bautista-bot/src/rules/: cheap.rs  heater.rs  mod.rs  util.rs
rust/bautista-bot/src/status/: mod.rs  types.rs
rust/bautista-bot/src/telegram/: api.rs  mod.rs
rust/bautista-bot/src/util/: mod.rs
scripts/: release
(+1 files in other folders)
