[package]
name = "bautista-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
thiserror = "1.0.30"
toml = "0.5.9"
